<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="basic_category"
        app:title="@string/preference_setting_default_category_title">

        <Preference
            app:key="setting_background"
            app:iconSpaceReserved="false"
            app:title="@string/fragment_setting_background_title"
            />

        <Preference
            app:key="setting_text_size"
            app:iconSpaceReserved="false"
            app:title="@string/preference_setting_text_size_title"
            app:summary="test"
            />

        <Preference
            app:key="setting_text_alignment"
            app:iconSpaceReserved="false"
            app:title="@string/preference_setting_text_alignment_title"
            app:summary="test"
            />
    </PreferenceCategory>

</PreferenceScreen>