<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/todo_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_add_todo_list_title"
        android:textSize="26dp"
        />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:textSize="18dp"
        android:hint="@string/dialog_add_todo_list_edit_tv_hint"
        android:id="@+id/todoList_editTv"
/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:layout_margin="20dp"
        android:text="@string/dialog_add_todo_list_btn_text"
        android:textSize="20dp"
        android:id="@+id/add_todoList_btn2"
        >
    </Button>
</LinearLayout>